--- a/src/components/Role/Follow.css
+++ b/src/components/Role/Follow.css
@@ -52,8 +52,17 @@
 }
 
 .user-name {
-  font-size: 16px;
-  color: black;
+  display: flex;
+  align-items: center;
+}
+
+.icon-and-name {
+  display: flex;
+  align-items: center;
+}
+
+.user-icon {
+  margin-right: 8px;
 }
 
 .followMsg {
@@ -63,14 +72,14 @@
 
 .follow-button {
   padding: 6px 12px;
-  background-color: red;
-  color: #fff;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  color: red;
+  border: 1px solid red;
+  background-color: white;
+  border-radius: 5px;
 }
 
 .follow-button:hover {
-  background-color: #0056b3;
+  transform: scale(1.03);
 }
