--- a/src/components/Role/UserForm.css
+++ b/src/components/Role/UserForm.css
@@ -23,8 +23,8 @@
   margin-bottom: 20px;
 }
 
-.HomeProfileImage {
-  width: 100px; /* 적절한 이미지 크기로 조정 */
+.userProfileImage {
+  width: 100px; 
   height: 100px;
   border-radius: 50%;
   object-fit: cover;
@@ -171,7 +171,7 @@
   width: 100%;
 }
 
-.postCard {
+.postCardList {
   width: 100%;
   height: 100px;
   border: 1px solid lightgray;
@@ -183,16 +183,16 @@
   margin-bottom: 20px;
 }
 
-.postCard:hover {
+.postCardList:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.postCard h3 {
+.postCardList h3 {
   font-size: 1.2em;
   margin: 0 0 10px;
 }
 
-.postCard p {
+.postCardList p {
   color: #555;
   font-size: 16px;
   margin: 5px 0;
@@ -200,7 +200,7 @@
   align-items: center;
 }
 
-.postCard p .icon {
+.postCardList p .icon {
   margin-right: 8px;
 }
 
